fix type in create account button add more spacing to auth form clear fields and errors when switching between auth forms break errors into multiple lines

--- a/app/assets/stylesheets/components/landing_page.scss
+++ b/app/assets/stylesheets/components/landing_page.scss
@@ -122,11 +122,13 @@ button {
     color: white;
   }
   a {
+    margin: 20px;
     font-size: 20px;
     color: grey;
   }
-  p {
+  ul {
     color: red;
+    text-align: center;
   }
 }
 
